--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -7,7 +7,7 @@ PermissionsStartOnly=true
 PIDFile=/run/hbnb/hbnb.pid
 User=ubuntu
 Group=ubuntu
-ExecStartPre = /bin/mkdir /run/hbnb
+ExecStartPre = /bin/mkdir -p /run/hbnb
 ExecStartPre = /bin/chown -R ubuntu:ubuntu /run/hbnb
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4/
 ExecStart=/home/ubuntu/.local/bin/gunicorn --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --pid /run/hbnb/hbnb.pid --workers 3 --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log
